--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,8 @@
   background: #3dd8fc;
   border: 1px solid #3dd8fc;
 }
+/*Form*/
+#form-objet {
+  color: rgba(255, 255, 255, 0.75) !important;
+  font-size: 1rem;
+}
