--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,38 @@
+/*General Style*/
+[data-neon='title'] {
+  text-shadow:
+    0 0 10px #fa6a10,
+    0 0 15px #fa6a10,
+    0 0 25px #fa6a10,
+    0 0 50px #fa6a10 !important;
+}
+
+@keyframes neonGlow {
+  0%,
+  100% {
+    text-shadow:
+      0 0 5px #a100ff,
+      0 0 10px #a100ff,
+      0 0 20px #a100ff,
+      0 0 40px #a100ff,
+      0 0 80px #a100ff;
+  }
+  50% {
+    text-shadow:
+      0 0 2px #a100ff,
+      0 0 5px #a100ff,
+      0 0 10px #a100ff,
+      0 0 20px #a100ff,
+      0 0 40px #a100ff;
+  }
+}
+
+.span_purple-shadow {
+  color: #fff;
+  animation: neonGlow 2s infinite alternate;
+}
+
+/*Swiper*/
 .swiper-bullet {
   width: 0.75rem;
   height: 0.375rem;
@@ -11,6 +46,7 @@
   background: #3dd8fc;
   border: 1px solid #3dd8fc;
 }
+
 /*Form*/
 #form-objet {
   color: rgba(255, 255, 255, 0.75) !important;
@@ -21,7 +57,33 @@
 .cc--hp-zones_card p {
   transition: color 200ms ease;
 }
-
 .cc--hp-zones_card:hover p {
   color: var(--_brand---action--hover-text);
+}
+
+/*INFO CARDS*/
+/* Méthode 1: Border gradient avec pseudo-élément (Recommandée) */
+.cc--info-card {
+  position: relative;
+}
+
+.cc--info-card::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: inherit;
+  padding: 2px; /* épaisseur du border */
+  background: linear-gradient(90deg, #f4d1ff 0%, #dc70ff 100%);
+  -webkit-mask:
+    linear-gradient(#fff 0 0) content-box,
+    linear-gradient(#fff 0 0);
+  -webkit-mask-composite: xor;
+  mask:
+    linear-gradient(#fff 0 0) content-box,
+    linear-gradient(#fff 0 0);
+  mask-composite: exclude;
+  z-index: -1;
 }
