--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,6 @@ h2 {
 .is-border-green {
   position: relative;
 }
-
 .is-border-purple::before,
 .is-border-orange::before,
 .is-border-blue::before,
@@ -153,4 +152,43 @@ h2 {
   .faq_flexbox.w-dyn-items > [role='listitem']:nth-child(2n + 1) {
     transform: translateY(2.5rem);
   }
+}
+
+/*CC--Heading Cards Layout*/
+.cc--heading-cards-layout_card {
+  position: absolute;
+}
+
+/*CC--Button Navbar*/
+.button.is-navbar.is-gradient-light-blue {
+  position: relative;
+  overflow: hidden;
+  isolation: isolate; /* crée un contexte d’empilement local */
+  background-image: linear-gradient(90deg, rgb(93, 224, 230), rgb(0, 74, 173));
+}
+
+.button.is-navbar.is-gradient-light-blue::before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  background-image: linear-gradient(90deg, rgb(0, 74, 173), rgb(93, 224, 230));
+  opacity: 0;
+  transition: opacity 300ms ease-in-out;
+  pointer-events: none;
+  z-index: -1; /* derrière le contenu du lien */
+}
+
+.button.is-navbar.is-gradient-light-blue.-wfp-hover::before,
+.button.is-navbar.is-gradient-light-blue:hover::before {
+  opacity: 1;
+}
+
+/*TEST ANIMATION STICKY HP*/
+/* Wrapper de scroll */
+
+/* Scène pinée dans le viewport */
+.animation-container {
+  position: relative;
+  height: 100vh;
+  overflow: hidden;
 }
