--- a/src/index.css
+++ b/src/index.css
@@ -183,12 +183,17 @@ h2 {
   opacity: 1;
 }
 
-/*TEST ANIMATION STICKY HP*/
-/* Wrapper de scroll */
-
-/* Scène pinée dans le viewport */
+/*sticky animation hp*/
 .animation-container {
   position: relative;
   height: 100vh;
   overflow: hidden;
+}
+
+.animation-container .step {
+  position: absolute;
+  inset: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
