--- a/src/index.css
+++ b/src/index.css
@@ -192,7 +192,10 @@ h2 {
 
 .animation-container .step {
   position: absolute;
-  inset: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -202,5 +205,6 @@ h2 {
 @media (max-width: 480px) {
   .animation-container .step {
     bottom: 0;
+    top: auto;
   }
 }
