--- a/src/index.css
+++ b/src/index.css
@@ -204,7 +204,7 @@ h2 {
 /* Pour les très petits écrans (inférieurs à 480px) */
 @media (max-width: 480px) {
   .animation-container .step {
-    bottom: 0;
+    bottom: 1rem;
     top: auto;
   }
 }
